# lunettes_ibionics_2019

./: .gitignore  README.md  funcs_list.txt  pins.txt
Traitement_cxx/: CMakeLists.txt  main.cpp
Traitement_cxx/Crop/: crop.cpp
Traitement_cxx/Tool/: dev_tool.h
Traitement_cxx/edge_detection/: edgeDetection.cpp  edgeDetection.h  main.cpp
android_app/: AndroidManifest.xml  DoubleClickListener.java  MainActivity.java  backCameraActivity.java  back_camera.xml  frontCameraActivity.java  front_camera.xml  show_camera.xml
c++/: anglesPoints.h  main.cpp  sequences.cpp  vectorManipulation.cpp  vectorManipulation.h
ibionics_test_gui/: eyetab.cpp  gpiotab.cpp  gpiotab.h  ibionics_test_gui.pro  lasertab.cpp  mainwindow.cpp  mainwindow.h  medialabel.cpp  memstab.cpp
ibionics_test_gui/app_main/: README  app.pro  laser_pos_control.pro  main.cpp  mainwindow.cpp  mainwindow.h
mathMems/: XYZ2Angle.m  angle2XY.m  angle2XY_MHOUDE.m  calcArraySize.m  computeSurface.m  findReflectedVector.m  findWallCorners.m  findWallSurfaceSize.m  ga.py  genAngleTable.m  genAngleTable_V2.m  genAngleTable_V3.m  genPixMat.m  genXYZ.m  lookUpTable.h  mat2LookUp.m  mathMems.m  memsNorm.m  sol_anal.m  surfaceMatrix.m  tableManipulator.m  testingLookUpTable.m  vectorPlot.m
pupilDetection/: CMakeLists.txt  main.cpp
pupilDetection/Gradient/: gradient.cpp  gradient.h
pupilDetection/HoughCircle/: houghCircle.cpp  houghCircle.h
sequences/: circularLoop_LUT.h  closingRect_LUT.h  infinity_LUT.h  memsNorm.m  rectangle_LUT.h  sequence2LookUp.m  sequences.m  spiral_LUT.h
src/: Makefile  main.cpp
(+115 files in other folders)
